--- a/roles/falcon_configure/tasks/main.yml
+++ b/roles/falcon_configure/tasks/main.yml
@@ -11,7 +11,7 @@
       # noqa unnamed-task 502
   when:
     - falcon_client_id and falcon_client_secret
-    - not falcon_cid
+    - not falcon_cid|length == 0
 
 - block:
     - ansible.builtin.include_tasks: configure.yml
