--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: ansible/ansible-lint-action@master
+    - uses: ansible/ansible-lint-action@main
       with:
         targets: roles
         override-deps: |
