--- a/.github/workflows/falcon_configure.yml
+++ b/.github/workflows/falcon_configure.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           sudo apt install apt-transport-https ca-certificates curl software-properties-common
           python -m pip install --upgrade pip
-          pip install molecule[docker,lint,ansible] yamllint ansible-lint
+          pip install molecule[docker,lint,ansible] yamllint ansible-lint==5.4.0
 
       - name: Build/Install the collection
         run: |
