Fixed typo in falcon_configure README + api task issue

--- a/roles/falcon_configure/tasks/main.yml
+++ b/roles/falcon_configure/tasks/main.yml
@@ -11,6 +11,7 @@
       # noqa unnamed-task 502
   when:
     - falcon_client_id and falcon_client_secret
+    - falcon_option_set
     - not falcon_cid
 
 - block:
