Changes to support better GH workflow logic surrounding pull_request_target

--- a/.github/workflows/falcon_configure.yml
+++ b/.github/workflows/falcon_configure.yml
@@ -17,7 +17,9 @@ jobs:
   molecule:
     if: |
       github.event_name == 'push' ||
-      github.event.label.name == 'ok-to-test'
+      github.event_name == 'schedule' ||
+      (github.event_name == 'pull_request_target' &&
+      github.event.label.name == 'ok-to-test')
     runs-on: ubuntu-18.04
     env:
       PY_COLORS: 1
@@ -37,9 +39,13 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
+        if: github.event_name != 'pull_request_target'
+
+      - name: Check out code
+        uses: actions/checkout@v2
         with:
-          ref: ${{github.event.pull_request.head.ref}}
-          repository: ${{github.event.pull_request.head.repo.full_name}}
+          ref: ${{github.event.pull_request.head.sha}}
+        if: github.event_name == 'pull_request_target'
 
       - name: Set up Python
         uses: actions/setup-python@v2
