--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt-get install -y libyaml-dev python3-venv
+          sudo apt-get install -y libyaml-dev
           python -m pip install --upgrade pip
           pip install ansible yamllint jinja2 pylint pyyaml voluptuous
 
