--- a/galaxy.yml
+++ b/galaxy.yml
@@ -69,4 +69,5 @@ issues: https://github.com/CrowdStrike/ansible_collection_crowdstrike/issues
 # artifact. A pattern is matched from the relative path of the file or directory of the collection directory. This
 # uses 'fnmatch' to match the files or directories. Some directories and files like 'galaxy.yml', '*.pyc', '*.retry',
 # and '.git' are always filtered
-build_ignore: []
+build_ignore:
+  - '.devcontainer'
