--- a/roles/falcon_install/tasks/preinstall.yml
+++ b/roles/falcon_install/tasks/preinstall.yml
@@ -25,7 +25,9 @@
 - name: "CrowdStrike Falcon | Configure Python Interpreter for older Linux OSes"
   ansible.builtin.set_fact:
     ansible_python_interpreter: /usr/bin/python
-  when: ansible_distribution == "Amazon"
+  when:
+    - ansible_distribution == "Amazon"
+    - ansible_distribution_major_version | int < 2
 
 - name: "CrowdStrike Falcon | Default Operating System configuration"
   ansible.builtin.set_fact:
