Adding 11 to debian os_version api filter

--- a/roles/falcon_install/tasks/preinstall.yml
+++ b/roles/falcon_install/tasks/preinstall.yml
@@ -54,7 +54,7 @@
 
 - name: "CrowdStrike Falcon | Endpoint Operating System Detected Is Debian"
   ansible.builtin.set_fact:
-    falcon_os_version: "9/10"
+    falcon_os_version: "9/10/11"
   when:
     - ansible_distribution == "Debian"
 
