--- a/roles/falcon_configure/meta/main.yml
+++ b/roles/falcon_configure/meta/main.yml
@@ -16,7 +16,7 @@ galaxy_info:
   # - CC-BY-4.0
   license: GPL-3.0-or-later
 
-  min_ansible_version: 2.11
+  min_ansible_version: "2.11"
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
@@ -30,31 +30,32 @@ galaxy_info:
   platforms:
     - name: Amazon Linux 2
       versions:
-        - any
-    - name: Amazon Linux
+        - all
+    - name: Amazon
       versions:
-        - 2018.03
-        - 2017.09
+        - "2018.03"
+        - "2017.09"
     - name: Debian
       versions:
-        - 9
-        - 10
+        - "stretch"
+        - "buster"
+        - "bullseye"
     - name: EL
       versions:
-        - 6
-        - 7
-        - 8
+        - "6"
+        - "7"
+        - "8"
     - name: SLES
       versions:
-        - 15
-        - 12SP1
-        - 12
-        - 11SP4
+        - "15"
+        - "12SP1"
+        - "12"
+        - "11SP4"
     - name: Ubuntu
       versions:
-        - focal
-        - bionic
-        - xenial
+        - "focal"
+        - "bionic"
+        - "xenial"
 
   galaxy_tags:
     # List tags for your role here, one per line. A tag is a keyword that describes
