--- a/roles/falcon_configure/tasks/configure.yml
+++ b/roles/falcon_configure/tasks/configure.yml
@@ -1,50 +1,50 @@
 ---
-# Linux block
-- block:
-  - name: CrowdStrike Falcon | Configure Falcon Sensor Options (Linux)
-    crowdstrike.falcon.falconctl:
-      cid: "{{ falcon_cid if (falcon_cid != None) else omit }}"
-      provisioning_token: "{{ falcon_provisioning_token if (falcon_provisioning_token != None) else omit }}"
-      apd: "{{ falcon_apd if (falcon_apd != None) else omit }}"
-      aph: "{{ falcon_aph if (falcon_aph != None) else omit }}"
-      app: "{{ falcon_app if (falcon_app != None) else omit }}"
-      trace: "{{ falcon_trace if (falcon_trace != None) else omit }}"
-      feature: "{{ falcon_feature if (falcon_feature != None) else omit }}"
-      message_log: "{{ falcon_message_log if (falcon_message_log != None) else omit }}"
-      billing: "{{ falcon_billing if (falcon_billing != None) else omit }}"
-      tags: "{{ falcon_tags if (falcon_tags != None) else omit }}"
-      state: "{{ 'present' if falcon_option_set else 'absent' }}"
-    notify: CrowdStrike Falcon | Restart Falcon Sensor
+- name: Linux Block
+  block:
+    - name: CrowdStrike Falcon | Configure Falcon Sensor Options (Linux)
+      crowdstrike.falcon.falconctl:
+        cid: "{{ falcon_cid if (falcon_cid != None) else omit }}"
+        provisioning_token: "{{ falcon_provisioning_token if (falcon_provisioning_token != None) else omit }}"
+        apd: "{{ falcon_apd if (falcon_apd != None) else omit }}"
+        aph: "{{ falcon_aph if (falcon_aph != None) else omit }}"
+        app: "{{ falcon_app if (falcon_app != None) else omit }}"
+        trace: "{{ falcon_trace if (falcon_trace != None) else omit }}"
+        feature: "{{ falcon_feature if (falcon_feature != None) else omit }}"
+        message_log: "{{ falcon_message_log if (falcon_message_log != None) else omit }}"
+        billing: "{{ falcon_billing if (falcon_billing != None) else omit }}"
+        tags: "{{ falcon_tags if (falcon_tags != None) else omit }}"
+        state: "{{ 'present' if falcon_option_set else 'absent' }}"
+      notify: CrowdStrike Falcon | Restart Falcon Sensor
 
-  - name: CrowdStrike Falcon | Register Falcon Sensor Options
-    crowdstrike.falcon.falconctl_info:
-    register: info
+    - name: CrowdStrike Falcon | Register Falcon Sensor Options
+      crowdstrike.falcon.falconctl_info:
+      register: info
 
-  - name: CrowdStrike Falcon | Remove Falcon Agent ID (AID) If Building A Primary Image
-    crowdstrike.falcon.falconctl:
-      aid: yes
-      state: absent
-    when: falcon_remove_aid
+    - name: CrowdStrike Falcon | Remove Falcon Agent ID (AID) If Building A Primary Image
+      crowdstrike.falcon.falconctl:
+        aid: yes
+        state: absent
+      when: falcon_remove_aid
 
   when: ansible_distribution != "MacOSX"
 
-# MacOSX block
-- block:
-  - name: CrowdStrike Falcon | Associate Falcon Sensor with your Customer ID (CID) (macOS)
-    ansible.builtin.command: "/Applications/Falcon.app/Contents/Resources/falconctl license {{ falcon_cid }}"
-    when:
-      - falcon_cid
-      - not falcon_provisioning_token
+- name: MacOSX Block
+  block:
+    - name: CrowdStrike Falcon | Associate Falcon Sensor with your Customer ID (CID) (macOS)
+      ansible.builtin.command: "/Applications/Falcon.app/Contents/Resources/falconctl license {{ falcon_cid }}"
+      when:
+        - falcon_cid
+        - not falcon_provisioning_token
 
-  - name: CrowdStrike Falcon | Associate Falcon Sensor with your Provisioning Token (macOS)
-    ansible.builtin.command: "/Applications/Falcon.app/Contents/Resources/falconctl license {{ falcon_cid }} {{ falcon_provisioning_token }}"
-    when:
-      - falcon_cid
-      - not falcon_provisioning_token
+    - name: CrowdStrike Falcon | Associate Falcon Sensor with your Provisioning Token (macOS)
+      ansible.builtin.command: "/Applications/Falcon.app/Contents/Resources/falconctl license {{ falcon_cid }} {{ falcon_provisioning_token }}"
+      when:
+        - falcon_cid
+        - not falcon_provisioning_token
 
-  - name: CrowdStrike Falcon | Starting Falcon Sensor (macOS)
-    ansible.builtin.command: "launchctl {{ falcon_service_state | default('start') }} com.crowdstrike.falcond"
-    when:
-      - falcon_cid
+    - name: CrowdStrike Falcon | Starting Falcon Sensor (macOS)
+      ansible.builtin.command: "launchctl {{ falcon_service_state | default('start') }} com.crowdstrike.falcond"
+      when:
+        - falcon_cid
 
   when: ansible_distribution == "MacOSX"
