--- a/.github/workflows/falcon_configure.yml
+++ b/.github/workflows/falcon_configure.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           sudo apt install apt-transport-https ca-certificates curl software-properties-common
           python -m pip install --upgrade pip
-          pip install molecule[docker,lint,ansible] yamllint ansible-lint==5.4.0
+          pip install molecule[docker,lint,ansible] ansible yamllint ansible-lint==5.4.0
 
       - name: Build/Install the collection
         run: |
