Add better support for os_version control, bump version, minor format fix

--- a/roles/falcon_install/tasks/preinstall.yml
+++ b/roles/falcon_install/tasks/preinstall.yml
@@ -35,7 +35,7 @@
     falcon_os_family: "{{ ansible_system | lower }}"
     falcon_os_version: "{{ ansible_distribution_major_version }}"
     falcon_sensor_update_policy_platform: "{{ ansible_system }}"
-    falcon_os_vendor: "{{ ansible_os_family|lower if (ansible_os_family == 'RedHat' and ansible_distribution != 'Amazon') else ansible_distribution|lower }}"
+    falcon_os_vendor: "{{ ansible_os_family | lower if (ansible_os_family == 'RedHat' and ansible_distribution != 'Amazon') else ansible_distribution | lower }}"
 
 - name: "CrowdStrike Falcon | Determine if Endpoint Operating System Is RHEL, CentOS, or Oracle Linux"
   ansible.builtin.set_fact:
@@ -54,13 +54,13 @@
 
 - name: "CrowdStrike Falcon | Endpoint Operating System Detected Is Debian"
   ansible.builtin.set_fact:
-    falcon_os_version: "9/10/11"
+    falcon_os_version: "*{{ falcon_os_version }}*"
   when:
     - ansible_distribution == "Debian"
 
 - name: "CrowdStrike Falcon | Endpoint Operating System Detected Is Ubuntu"
   ansible.builtin.set_fact:
-    falcon_os_version: "16/18/20"
+    falcon_os_version: "*{{ falcon_os_version }}*"
   when:
     - ansible_distribution == "Ubuntu"
 
