--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,16 +13,19 @@
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
 		"files.associations": {
-		  "**/defaults/**/*": "ansible",
-		  "**/tasks/**/*.yml": "ansible",
-		  "**/handler/*.yml": "ansible",
-		  "**/*_vars/**/*.yml": "ansible",
-		  "**/roles/**/*.yml": "ansible",
-		  "**/playbooks/**/*.yml": "ansible",
-		  "**/*ansible*/**/*.yml": "ansible",
-		  "**/vars/**/*.yml": "ansible",
-		  "**/inventory/*/*": "ansible",
-		  "*.yml": "ansible"
+			// Ansible
+			"**/defaults/**/*.yml": "jinja-yaml",
+			"**/group_vars/**/*": "jinja-yaml",
+			"**/host_vars/**/*": "jinja-yaml",
+			"**/vars/**/*.yml": "jinja-yaml",
+			"**/tasks/**/*.yml": "ansible",
+			"**/handlers/*.yml": "ansible",
+			"**/meta/*.yml": "ansible",
+			"**/roles/**/*.yml": "ansible",
+			"**/playbooks/**/*.yml": "ansible",
+			"**/ansible/**/hosts": "ini",
+			"**/ansible/**/inventory": "ini",
+			"ansible.cfg": "ini"
 		},
 		"terminal.integrated.defaultProfile.linux": "zsh",
 		"[jinja-yaml]": {
@@ -46,7 +49,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pre-commit install && pre-commit autoupdate",
+	"postCreateCommand": "pre-commit install",
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode"
