add file install method

--- a/roles/falcon_install/tasks/main.yml
+++ b/roles/falcon_install/tasks/main.yml
@@ -19,6 +19,13 @@
     - ansible_os_family != "Windows"
 
 - block:
+    - ansible.builtin.include_tasks: file.yml
+      # noqa unnamed-task 502
+  when:
+    - falcon_install_method == "file"
+    - ansible_os_family != "Windows"
+
+- block:
     - ansible.builtin.include_tasks: win_api.yml
       # noqa unnamed-task 502
   when:
