--- a/roles/falcon_install/tasks/file.yml
+++ b/roles/falcon_install/tasks/file.yml
@@ -1,18 +1,6 @@
 ---
-
-- name: Copy Falcon install file to host
-  ansible.builtin.copy:
-    src: "{{ falcon_localfile_src }}"
-    dest: "{{ falcon_install_temp_directory.path }}"
-    mode: 0640
-  when:
-    - falcon_localfile_src
-    - falcon_install_temp_directory
-  register: falcon_sensor_download
-  retries: "{{ falcon_retries }}"
-  delay: "{{ falcon_delay }}"
-  until: falcon_sensor_download is success
-
-- name: CrowdStrike Falcon | Set full file download path
+- name: CrowdStrike Falcon | Set full file path
   ansible.builtin.set_fact:
-    falcon_sensor_pkg: "{{ falcon_sensor_download.dest }}"
+    falcon_sensor_pkg: "{{ falcon_localfile_path }}"
+  when:
+    - falcon_localfile_path|length > 0
