--- a/.github/workflows/win_falcon_configure.yml
+++ b/.github/workflows/win_falcon_configure.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install molecule[vagrant,lint,ansible] ansible yamllint ansible-lint==5.4.0 python-vagrant molecule-vagrant "pywinrm>=0.3.0"
+          pip install molecule[lint] ansible yamllint ansible-lint python-vagrant molecule-vagrant "pywinrm>=0.3.0"
 
       - name: Build/Install the collection
         run: |
