--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.1.0
+    rev: v4.3.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -10,7 +10,7 @@ repos:
       - id: check-added-large-files
 
   - repo: https://github.com/ansible/ansible-lint.git
-    rev: v5.4.0
+    rev: v6.8.0b3
     hooks:
       - id: ansible-lint
         files: \.(yaml|yml)$
@@ -21,6 +21,6 @@ repos:
       - id: flake8
 
   - repo: https://github.com/PyCQA/pylint
-    rev: v2.15.0
+    rev: v2.15.3
     hooks:
       - id: pylint
