--- a/roles/falcon_configure/tasks/main.yml
+++ b/roles/falcon_configure/tasks/main.yml
@@ -1,32 +1,36 @@
 ---
 # tasks file for falcon_configure
-- block:
-    - ansible.builtin.include_tasks: api.yml
-      # noqa unnamed-task 502
+- name: API block
   when:
     - falcon_client_id and falcon_client_secret
     - falcon_option_set
     - not falcon_cid
+  block:
+    - ansible.builtin.include_tasks: api.yml
+      # noqa name[missing]
 
-- block:
-    - ansible.builtin.include_tasks: configure.yml
-      # noqa unnamed-task 502
+- name: Linux Configure block
   when:
     - ansible_os_family != "Windows"
     - not falcon_remove_aid
   become: true
   become_user: root
+  block:
+    - ansible.builtin.include_tasks: configure.yml
+      # noqa name[missing]
 
-- block:
-    - ansible.builtin.include_tasks: remove_aid.yml
-      # noqa unnamed-task 502
+- name: Remove AID block
   when: falcon_remove_aid
+  block:
+    - ansible.builtin.include_tasks: remove_aid.yml
+      # noqa name[missing]
 
-- block:
-    - ansible.builtin.include_tasks: win_configure.yml
-      # noqa unnamed-task 502
+- name: Windows block
   when:
     - ansible_os_family == "Windows"
   become: true
   become_method: "{{ falcon_windows_become_method }}"
   become_user: "{{ falcon_windows_become_user }}"
+  block:
+    - ansible.builtin.include_tasks: win_configure.yml
+      # noqa name[missing]
