--- a/roles/falcon_uninstall/tasks/main.yml
+++ b/roles/falcon_uninstall/tasks/main.yml
@@ -1,18 +1,20 @@
 ---
 # tasks file for falcon_uninstall
 - name: Linux Block
-  block:
-    - include_tasks: uninstall.yml
   when:
     - ansible_os_family != "Windows"
   become: true
   become_user: root
+  block:
+    - ansible.builtin.include_tasks: uninstall.yml
+      # noqa name[missing]
 
 - name: Windows Block
-  block:
-    - include_tasks: win_uninstall.yml
   when:
     - ansible_os_family == "Windows"
   become: true
   become_method: "{{ falcon_windows_become_method }}"
   become_user: "{{ falcon_windows_become_user }}"
+  block:
+    - ansible.builtin.include_tasks: win_uninstall.yml
+      # noqa name[missing]
