Fix issue with windows failing falcon_configure CI

--- a/roles/falcon_configure/tasks/main.yml
+++ b/roles/falcon_configure/tasks/main.yml
@@ -22,7 +22,9 @@
       # noqa name[missing]
 
 - name: Remove AID block
-  when: falcon_remove_aid
+  when:
+    - falcon_remove_aid
+    - ansible_os_family != "Windows"
   block:
     - ansible.builtin.include_tasks: remove_aid.yml
       # noqa name[missing]
