--- a/roles/falcon_install/tasks/preinstall.yml
+++ b/roles/falcon_install/tasks/preinstall.yml
@@ -36,7 +36,7 @@
     falcon_os_version: "*{{ ansible_distribution_major_version }}*"
     falcon_sensor_update_policy_platform: "{{ ansible_system }}"
     falcon_os_vendor: "{{ ansible_os_family | lower if (ansible_os_family == 'RedHat' and ansible_distribution != 'Amazon') else ansible_distribution | lower }}"
-    falcon_os_arch: "{{ '\"+os_version:!~\"arm64\"' if ansible_architecture == 'x86_64' else '\"+os_version:~\"arm64\"' }}"
+    falcon_os_arch: "{{ falcon_os_arch_dict[ansible_architecture] }}"
 
 - name: "CrowdStrike Falcon | Determine if Endpoint Operating System Is RHEL, CentOS, or Oracle Linux"
   ansible.builtin.set_fact:
