Update win_install.yml - fix undefined var
replace {{ falcon_cid }} with {{ falcon_client_id }}

--- a/roles/falcon_install/tasks/win_install.yml
+++ b/roles/falcon_install/tasks/win_install.yml
@@ -4,7 +4,7 @@
     path: "{{ falcon_sensor_pkg }}"
     state: present
     creates_service: csfalconservice
-    arguments: '/install /quiet CID={{ falcon_cid }} {{ falcon_windows_install_args }}'
+    arguments: '/install /quiet CID={{ falcon_client_id }} {{ falcon_windows_install_args }}'
   when:
     - ansible_os_family == "Windows"
   register: falcon_installed
