--- a/.github/workflows/falcon_uninstall.yml
+++ b/.github/workflows/falcon_uninstall.yml
@@ -59,9 +59,14 @@ jobs:
           pip install molecule[docker,lint] ansible yamllint ansible-lint
 
       - name: Build/Install the collection
-        run: |
-          collection_file=$( basename $(ansible-galaxy collection build -f | awk -F" " '{print $NF}'))
-          ansible-galaxy collection install $collection_file
+        uses: nick-fields/retry@v2
+        with:
+          timeout_minutes: 2
+          max_attempts: 3
+          retry_on: error
+          command: |
+            collection_file=$( basename $(ansible-galaxy collection build -f | awk -F" " '{print $NF}'))
+            ansible-galaxy collection install $collection_file
 
       - name: Run role tests
         uses: nick-fields/retry@v2
